// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Breadcrumbs/Breadcrumbs Defaults smoke-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithAriaLabel play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithAttributes play-test 1`] = `
<div data-test-block="true">
  <nav id="htmlId"
       class="dummyClassname"
       lang="nb"
       data-testid="123ID"
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithCollapse play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_expandButtonWrapper_17e64_12">
        <button class="_button_1hc5e_1 _button_small_1hc5e_42"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r4:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r4:">
              Vis hele stien
            </title>
            <path d="M16 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Z">
            </path>
          </svg>
        </button>
        <span aria-hidden="true">
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithExpandClickAndFocus play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithNavigation smoke-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithRef play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
       id="dummyIdForwardedFromRef"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithoutCollapse play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_17e64_1">
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Bedrift og organisasjon
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1">
        <a class="_link_z7jba_1"
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
        <span class="_separator_1ojdc_8"
              aria-hidden="true"
        >
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_1ojdc_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
